--- a/SpringBoot2WarSample/build.gradle
+++ b/SpringBoot2WarSample/build.gradle
@@ -52,11 +52,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     //implementation 'org.springframework.data:spring-data-commons' //spring-starter-data-jpa 선언하면 추가할 필요 없음
     //암호화
-    implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '2.1.1' 
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1' 
 	//thymeleaf :  spring security
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	//thymeleaf : 레이아웃
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	//influxdb
+	implementation 'com.github.miwurster:spring-data-influxdb:1.8'
 }
 
 //수동 추가
